<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="main"
            type="com.github.trdevendran.queuedprogressbar.MainActivity" />
    </data>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context="com.github.trdevendran.queuedprogressbar.MainActivity">

        <com.printfthoughts.queuedprogressbar.QueuedProgressBar
            android:id="@+id/test_queued_progressbar"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:ballColor="@color/colorAccent"
            app:ballCount="7"
            app:interval="5"
            app:ballRadius="4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/speed_controller_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/test_queued_progressbar"
            android:text="@string/speed_title" />

        <SeekBar
            android:id="@+id/speed_controller_sb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toRightOf="@id/speed_controller_tv"
            app:layout_constraintTop_toBottomOf="@+id/test_queued_progressbar"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/radius_controller_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/speed_controller_tv"
            android:text="@string/radius_title" />

        <SeekBar
            android:id="@+id/radius_controller_sb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toRightOf="@id/radius_controller_tv"
            app:layout_constraintTop_toBottomOf="@+id/speed_controller_tv"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/ball_count_controller_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/radius_controller_tv"
            android:text="@string/ball_count_title" />

        <SeekBar
            android:id="@+id/ball_count_controller_sb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toRightOf="@id/ball_count_controller_tv"
            app:layout_constraintTop_toBottomOf="@+id/radius_controller_tv"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/ball_color_controller_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/ball_color_title"
            app:layout_constraintTop_toBottomOf="@id/ball_count_controller_tv"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ball_color_controller_tv"
            >
            <RadioButton
                android:id="@+id/default_color_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultColor"
                />
            <RadioButton
                android:id="@+id/red_color_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
                />
            <RadioButton
                android:id="@+id/green_color_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"
                />
            <RadioButton
                android:id="@+id/blue_color_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                />
        </RadioGroup>
    </android.support.constraint.ConstraintLayout>
</layout>
